--- a/front/pages/server/server-list.html
+++ b/front/pages/server/server-list.html
@@ -22,6 +22,9 @@
             <input class="layui-input" placeholder="请输入服务名" autocomplete="off" name="server">
           </div>
           <div class="layui-input-inline">
+            <input class="layui-input" placeholder="请输入分区" autocomplete="off" name="division">
+          </div>
+          <div class="layui-input-inline">
             <input class="layui-input" placeholder="请输入节点" autocomplete="off" name="node">
           </div>
 
@@ -67,21 +70,21 @@
           { field: "server", title: "服务", fixed: 'left' },
           { field: "division", title: "分区", fixed: 'left' },
           { field: "node", title: "节点", fixed: 'left' },
-          { field: "template_name", title: "模板名", fixed: 'left'},
+          { field: "template_name", title: "模板名", fixed: 'left' },
           {
             field: "setting_stat", title: "设置状态", fixed: 'left', align: "center", templet: function (d) {
               switch (d.setting_stat) {
-                case 1: return "自动重启";
-                case 0: return "<font color='#FF5722'>不重启</font>";
+                case '1': return "自动重启";
+                case '0': return "<font color='#FF5722'>不重启</font>";
               }
             }
           },
           {
             field: "cur_stat", title: "当前状态", templet: function (d) {
               switch (d.cur_stat) {
-                case 0: return "<font color='#FF5722'>停止</font>";
-                case 1: return "<font color='#5FB878'>运行中</font>";
-                case 2: return "<font color='#FFB800'>启动中</font>";
+                case '0': return "<font color='#FF5722'>停止</font>";
+                case '1': return "<font color='#5FB878'>运行中</font>";
+                case '2': return "<font color='#FFB800'>启动中</font>";
                 default: return "未知状态: " + d.cur_stat;
               }
             }
@@ -95,7 +98,7 @@
       });
 
       function serverOperator(data, cmd) {
-        let vItem = [{ "sApp": data.app, "sServer": data.server, "sDivision": data.division, "sCommand": cmd }]
+        let vItem = [{ "sApp": data.app, "sServer": data.server, "sDivision": data.division, "sNodeName": data.node, "sCommand": cmd }]
         let req = {
           "vItem": JSON.stringify(vItem),
         }
@@ -144,6 +147,9 @@
           case "add":
             add();
             break;
+          case "batchDel":
+            batchDel();
+            break;
         }
       });
 
@@ -161,7 +167,7 @@
       function openPublish() {
         let param = {
           type: 2,
-          title : "发布设置",
+          title: "发布设置",
           content: "./publish-list.html",
           area: ['90%', "90%"],
           end: function () {
@@ -180,11 +186,11 @@
         }
         let vItem = [];
         for (let v of checkStatus.data) {
-          vItem.push({ "sApp": v.app, "sServer": v.server, "sDivision": v.division, "sCommand": cmd });
+          vItem.push({ "sApp": v.app, "sServer": v.server, "sDivision": v.division, "sNodeName": v.node, "sCommand": cmd });
         }
 
         let req = {
-          "vItem": JSON.stringify(vItem),
+          "vItem": okUtils.jsonToString(vItem),
         }
         okUtils.ajax("/api/server/operator", "post", req, true).done(function (response) {
           taskNo = response.data;
@@ -204,6 +210,30 @@
       function add() {
         okLayer.open("增加服务", "./server-add.html", "90%", "90%", null, function () {
           serverTable.reload();
+        });
+      }
+
+      function batchDel() {
+        okLayer.confirm("确定要批量删除吗？", function (index) {
+          layer.close(index);
+          let checkStatus = table.checkStatus("tableId");
+          if (checkStatus.data.length == 0) {
+            layer.msg("未选择有效数据", { offset: "t", anim: 6 });
+            return;
+          }
+          let servers = [];
+          for (let v of checkStatus.data) {
+            servers.push({ "app": v.app, "server": v.server, "division": v.division, "node": v.node });
+          }
+
+          let req = {
+            "servers": okUtils.jsonToString(servers),
+          }
+          okUtils.ajax("/api/server/del", "post", req, true).done(function (response) {
+            okUtils.tableSuccessMsg(response.data);
+          }).fail(function (error) {
+            console.log(error)
+          });
         });
       }
 
@@ -233,12 +263,11 @@
   </script>
 
   <script type="text/html" id="toolbarTpl">
+    <div class="layui-inline" lay-event="add"><i class="layui-icon layui-icon-add-1"></i></div>
+    <div class="layui-inline" lay-event="batchDel"><a href="javascript:" title="批量删除"><i class="layui-icon layui-icon-delete"></i></a></div>
     <span style="cursor:pointer" lay-event="batchStop">停止</span>
     <span style="cursor:pointer" lay-event="batchStart">启动</span>
     <span style="cursor:pointer" lay-event="batchRestart">重启</span>
-    <div class="layui-btn-container">
-      <div class="layui-inline" lay-event="add"><i class="layui-icon layui-icon-add-1"></i></div>
-    </div>
   </script>
 
 </body>
