--- a/front/pages/server/publish-detail.html
+++ b/front/pages/server/publish-detail.html
@@ -97,8 +97,8 @@
 
         let vItem = [];
         for (let v of selectNode) {
-          vItem.push({"sApp":editServer.app, "sServer":editServer.server, "sDivision":v.division, "sCommand": "patch","mParam" : { "patchid": id }},);
-        }
+          vItem.push({"sApp":editServer.app, "sServer":editServer.server, "sDivision":v.division, "sNodeName": v.node, "sCommand": "patch","mParam" : { "patchid": id }},);
+         }
 
         let req = {
           "vItem": JSON.stringify(vItem),
