--- a/front/pages/server/publish-list.html
+++ b/front/pages/server/publish-list.html
@@ -79,11 +79,10 @@
 
             let param = {
                 type: 2,
-                title : "发布管理",
+                title : "发布服务",
                 content: "./publish-detail.html",
-                area: ['60%', "60%"],
+                area: ['90%', "90%"],
                 end: function () {
-
                 },
                 closeBtn: 2,
             }
