--- a/front/pages/server/server-list.html
+++ b/front/pages/server/server-list.html
@@ -168,7 +168,7 @@
       function openPublish() {
         let param = {
           type: 2,
-          title: "发布设置",
+          title: "发布",
           content: "./publish-list.html",
           area: ['90%', "90%"],
           end: function () {
