--- a/front/pages/server/patch-list.html
+++ b/front/pages/server/patch-list.html
@@ -38,12 +38,14 @@
         defaultToolbar: ['filter'],
         cols: [[
           { field: "id", title: "ID", fixed: 'left' },
-          { field: "remark", title: "备注", fixed: 'left' },
-          { field: "server", title: "服务", fixed: 'left' },
           { field: "file", title: "文件名", fixed: 'left' },
           { field: "version", title: "版本号", fixed: 'left' },
           { field: "md5", title: "md5" },
           { field: "upload_time", title: "上传时间" },
+          { field: "default", title: "默认发布", templet: function(d) {
+            return d.default == 1 ? "<font color='#5FB878'>当前发布</font>" : "";
+          }},
+          { field: "remark", title: "备注"},
           { title: "操作", align: "center", templet: "#operationTpl", fixed: 'right', width: 200 }
         ]]
       });
