--- a/front/pages/server/server-add.html
+++ b/front/pages/server/server-add.html
@@ -47,6 +47,13 @@
       </div>
 
       <div class="layui-form-item">
+        <label class="layui-form-label">自定义模板</label>
+        <div class="layui-input-block">
+          <textarea id="profile_conf_template" class="layui-textarea" rows="13"></textarea>
+        </div>
+      </div>
+
+      <div class="layui-form-item">
         <table id="tableId" lay-filter="tableFilter"></table>
       </div>
 
@@ -62,11 +69,12 @@
   <script src="/lib/layui/layui.js"></script>
   <script type="text/javascript" src="/lib/xm-select/xm-select.js"></script>
   <script>
-    layui.use(['form', 'element', 'okUtils', 'okLayer', 'table'], function () {
+    layui.use(['form', 'element', 'okUtils', 'okLayer', 'table', 'layer'], function () {
       let form = layui.form;
       let okUtils = layui.okUtils;
       let okLayer = layui.okLayer;
       let table = layui.table;
+      let layer = layui.layer;
       let $ = layui.jquery;
 
       let templateSelect = xmSelect.render({
@@ -106,14 +114,15 @@
         toolbar: "#toolbarTpl",
         defaultToolbar: ['filter'],
         cols: [[
-          { field: "obj", title: "obj", fixed: 'left', edit: 'text', width: '30%', align: 'center'},
-          { field: "port", title: "端口", edit: 'text', width: '10%', align: 'center' },
-          { field: "port_type", title: "端口类型", edit: 'text', width: '10%', align: 'center' },
-          { field: "protocol", title: "协议", edit: 'text', width: '10%', align: 'center' },
-          { field: "thread_num", title: "线程数", edit: 'text', width: '10%', align: 'center' },
-          { field: "max_conn", title: "最大连接数", edit: 'text', width: '10%', align: 'center' },
-          { field: "queue_cap", title: "队列最大长度", edit: 'text', width: '10%', align: 'center' },
-          { field: "queue_timeout", title: "队列超时时间(ms)", edit: 'text', align: 'center'},
+          { field: "obj", title: "obj", fixed: 'left', edit: 'text', width: '30%', align: 'center' },
+          { field: "port", title: "端口", edit: 'text', width: '8%', align: 'center' },
+          { field: "port_type", title: "端口类型", edit: 'text', width: '8%', align: 'center' },
+          { field: "protocol", title: "协议", edit: 'text', width: '8%', align: 'center' },
+          { field: "thread_num", title: "线程数", edit: 'text', width: '8%', align: 'center' },
+          { field: "max_conn", title: "最大连接数", edit: 'text', width: '8%', align: 'center' },
+          { field: "queue_cap", title: "队列最大长度", edit: 'text', width: '8%', align: 'center' },
+          { field: "queue_timeout", title: "队列超时时间(ms)", edit: 'text', align: 'center' },
+          { title: "操作", align: "center", templet: "#operationTpl", fixed: 'right' }
         ]]
       });
 
@@ -134,6 +143,7 @@
           node: $('#node').val(),
           setting_stat: parseInt($('#setting_stat').val()),
           template_name: templateSelect.getValue('valueStr'),
+          profile_conf_template: $('#profile_conf_template').val(),
           services: services,
         }
         okUtils.ajax("/api/server/add", "post", { server: okUtils.jsonToString(req) }, true).done(function (response) {
@@ -154,12 +164,26 @@
             curTable.reload({
               data: dataBak
             });
-            break;
-          }
+          } break;
+        }
+      });
+
+      table.on("tool(tableFilter)", function (obj) {
+        switch (obj.event) {
+          case "del-row": {
+            layer.confirm('真的删除行吗', function (index) {
+              obj.del();
+              layer.close(index);
+            });
+          } break;
         }
       });
 
     });
+  </script>
+
+  <script type="text/html" id="operationTpl">
+    <a href="javascript:" title="编辑" lay-event="del-row">删除</a>
   </script>
 
   <script type="text/html" id="toolbarTpl">
