--- a/front/pages/server/server-list.html
+++ b/front/pages/server/server-list.html
@@ -67,20 +67,10 @@
         defaultToolbar: ['filter'],
         cols: [[
           { type: "checkbox", title: "序号", fixed: 'left' },
-          { field: "app", title: "应用", fixed: 'left', minWidth: '100' },
-          { field: "server", title: "服务", fixed: 'left', minWidth: '150' },
+          { field: "app", title: "应用", fixed: 'left', minWidth: '60' },
+          { field: "server", title: "服务", fixed: 'left', minWidth: '100' },
           { field: "division", title: "分区", fixed: 'left', minWidth: '150' },
           { field: "node", title: "节点", fixed: 'left', minWidth: '150' },
-          { field: "template_name", title: "模板名", fixed: 'left' },
-          { field: "profile_conf_template", title: "自定义模板", fixed: 'left'},
-          {
-            field: "setting_stat", title: "设置状态", fixed: 'left', align: "center", templet: function (d) {
-              switch (d.setting_stat) {
-                case 1: return "自动重启";
-                case 0: return "<font color='#FF5722'>不重启</font>";
-              }
-            }
-          },
           {
             field: "cur_stat", title: "当前状态", templet: function (d) {
               switch (d.cur_stat) {
@@ -93,6 +83,16 @@
           },
           { field: "pid", title: "进程ID" },
           { field: "prom_port", title: "监听端口" },
+          {
+            field: "setting_stat", title: "设置状态", align: "center", templet: function (d) {
+              switch (d.setting_stat) {
+                case 1: return "自动重启";
+                case 0: return "<font color='#FF5722'>不重启</font>";
+              }
+            }
+          },
+          { field: "template_name", title: "模板名" },
+          { field: "profile_conf_template", title: "自定义模板" },
           { field: "publish_version", title: "版本" },
           { field: "publish_username", title: "发布人", align: "center" },
           { field: "publish_time", title: "发布时间", align: "center", minWidth: '200' },
