--- a/front/pages/system/user-pwd.html
+++ b/front/pages/system/user-pwd.html
@@ -34,6 +34,18 @@
 		</div>
 	</div>
 	<div class="layui-form-item">
+		<label class="layui-form-label">终端用户</label>
+		<div class="layui-input-block">
+			<input type="text" name="terminalUser" placeholder="请输入终端用户" lay-verify="terminalUser" lay-verType="tips" class="layui-input">
+		</div>
+	</div>
+	<div class="layui-form-item">
+		<label class="layui-form-label">终端密钥</label>
+		<div class="layui-input-block">
+			<textarea name="terminalKey" placeholder="请输入终端密钥" lay-verify="terminalKey" lay-verType="tips" class="layui-textarea"></textarea>
+		</div>
+	</div>
+	<div class="layui-form-item">
 		<div class="layui-input-block">
 			<button class="layui-btn" lay-submit="" lay-filter="changePwd">立即修改</button>
 			<button type="reset" class="layui-btn layui-btn-primary">重置</button>
