--- a/front/pages/server/server-list.html
+++ b/front/pages/server/server-list.html
@@ -84,10 +84,10 @@
           { field: "pid", title: "进程ID" },
           { field: "prom_port", title: "监听端口" },
           {
-            field: "setting_stat", title: "设置状态", align: "center", templet: function (d) {
-              switch (d.setting_stat) {
-                case 1: return "自动重启";
-                case 0: return "<font color='#FF5722'>不重启</font>";
+            field: "auto_start", title: "是否自动重启", align: "center", templet: function (d) {
+              switch (d.auto_start) {
+                case 1: return "是";
+                case 0: return "<font color='#FF5722'>否</font>";
               }
             }
           },
